src/objects/AttentionMM__Meeting_Minutes__c.object
<CustomObject>
    <fields>
        <fullName>AttentionMM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Attendees__c</fullName>
        <label>Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Location_Area__c</fullName>
        <label>Location Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Meeting Minutes</relationshipLabel>
        <relationshipName>Meeting_Minutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttentionMM__Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meeting Minutes</label>
    <listViews>
        <fullName>AttentionMM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Minutes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>